fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -76,8 +76,14 @@
 @media screen and (max-width:768px) {
     .projectEle {
         position: static;
-        margin-left: 0em;
-        margin-top: 0em;
+    }
+
+    .projectEle:nth-child(1) {
+        margin-top: 1em;
+    }
+
+    .projectEle:nth-child(2) {
+        margin-top: 10em;
     }
 }
 
